trying pixel perfect v1

--- a/html5css3/index.html
+++ b/html5css3/index.html
@@ -47,7 +47,7 @@
             <h1 class="order capitalize jumbo">All News</h1>
             </div>
           </div>
-          <div class="column subscribe">
+          <div class="subscribe">
             <h4 class="shake capitalize">Subscribe</h4>
             <input type="text" placeholder="Enter Email" />
             <button>Subscribe</button>
