--- a/html5css3/index.html
+++ b/html5css3/index.html
@@ -49,8 +49,10 @@
           </div>
           <div class="subscribe">
             <h4 class="shake capitalize">Subscribe</h4>
+            <div id="email">
             <input type="text" placeholder="Enter Email" />
             <button>Subscribe</button>
+            </div>
           </div>
         </section>
         <!-- Articles -->
@@ -61,7 +63,7 @@
           <div class="column">
             <h3>Title One</h3>
             <h5>Posted On 29 June, 2019 | Category, Category One</h5>
-            <p>
+            <p class="text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Temporibus odio porro at vitae exercitationem, cumque tenetur
               totam cupiditate eaque distinctio impedit, cum sequi mollitia
@@ -81,7 +83,7 @@
           <div class="column">
             <h3>Title Two</h3>
             <h5>Posted On 29 June, 2019 | Category, Category One</h5>
-            <p>
+            <p class="text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Temporibus odio porro at vitae exercitationem, cumque tenetur
               totam cupiditate eaque distinctio impedit, cum sequi mollitia
@@ -101,7 +103,7 @@
           <div class="column">
             <h3>Title Three</h3>
             <h5>Posted On 29 June, 2019 | Category, Category One</h5>
-            <p>
+            <p class="text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Temporibus odio porro at vitae exercitationem, cumque tenetur
               totam cupiditate eaque distinctio impedit, cum sequi mollitia
@@ -121,7 +123,7 @@
           <div class="column">
             <h3>Title Four</h3>
             <h5>Posted On 29 July, 2018 | Category, Category Two</h5>
-            <p>
+            <p class="text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Temporibus odio porro at vitae exercitationem, cumque tenetur
               totam cupiditate eaque distinctio impedit, cum sequi mollitia
