--- a/html5css3/index.html
+++ b/html5css3/index.html
@@ -8,7 +8,7 @@
     <!-- Base CSS File -->
     <link rel="stylesheet" href="css/main.css" />
     <!-- For IPads -->
-    <link rel="stylesheet" media="screen and (max-device-width : 890px)" href="css/tablet.css"> 
+    <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width : 890px)" href="css/tablet.css"> 
     <!-- For Mobile Phones  -->
     <link
       rel="stylesheet"
